--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-align: center;
+  list-style: none;
 }
 #countdownDisplay {
   font-size: 5rem;
